--- a/doc/test.tex
+++ b/doc/test.tex
@@ -11,10 +11,22 @@ Tasteranschlüsse verbunden und die Ausgangsspannung gemessen
 \begin{tabular}{@{}lllll}
                 & \multicolumn{2}{c}{$U_a$ Ja}  & \multicolumn{2}{c}{$U_a$ Nein} \\
   $R$           & Erwartet  & Gemessen  & Erwartet  & Gemessen  \\
-  offen         &           &           &           &           \\
-  $0 \Omega$    &           &           &           &           \\
-  $10 \Omega$   &           &           &           &           \\
-  $100 \Omega$  &           &           &           &           \\
-  $1 k\Omega$   &           &           &           &           \\
-  $10 k\Omega$  &           &           &           &           \\
+  offen         & $\geq3V$  & $4.88V$   & $\geq3V$  & $4.88V$   \\
+  $0 \Omega$    & $\leq1.5V$& $67.8mV$  & $\leq1.5V$& $67.5mV$  \\
+  $10 \Omega$   & $\leq1.5V$& $67.9mV$  & $\leq1.5V$& $67.6mV$  \\
+  $100 \Omega$  & $\leq1.5V$& $67.3mV$  & $\leq1.5V$& $67.0mV$  \\
+  $1 k\Omega$   & $\leq1.5V$& $75.8mV$  & $\leq1.5V$& $76.4mV$  \\
+  $10 k\Omega$  & $\geq3V$  & $4.88V$   & $\geq3V$  & $4.88V$   \\
+\end{tabular}
+
+\subsection{Inbetriebnahme Platine 2}
+\begin{tabular}{@{}lllll}
+                & \multicolumn{2}{c}{$U_a$ Ja}  & \multicolumn{2}{c}{$U_a$ Nein} \\
+  $R$           & Erwartet  & Gemessen  & Erwartet  & Gemessen  \\
+  offen         & $\geq3V$  & $4.88V$   & $\geq3V$  & $4.88V$   \\
+  $0 \Omega$    & $\leq1.5V$& $68.6mV$  & $\leq1.5V$& $69.1mV$  \\
+  $10 \Omega$   & $\leq1.5V$& $68.5mV$  & $\leq1.5V$& $69.3mV$  \\
+  $100 \Omega$  & $\leq1.5V$& $67.8mV$  & $\leq1.5V$& $68.3mV$  \\
+  $1 k\Omega$   & $\leq1.5V$& $76.6mV$  & $\leq1.5V$& $76.8mV$  \\
+  $10 k\Omega$  & $\geq3V$  & $4.88V$   & $\geq3V$  & $4.88V$   \\
 \end{tabular}
