--- a/doc/test.tex
+++ b/doc/test.tex
@@ -7,6 +7,12 @@ Platine mit einer Betriebsspannung von $5 V$ und einer Akkuspannung von $6.6 V$
 gespiesen. Anschliessend werden Widerstände gemäss nachfolgender Tabelle an die 
 Tasteranschlüsse verbunden und die Ausgangsspannung gemessen
 
+\subsection{Messmittel}
+\begin{tabular}{@{}ll}
+Speisegerät & Speisegerät 3183 \\
+Voltmeter   & Voltcraft 95 \\
+\end{tabular}
+
 \subsection{Inbetriebnahme Platine 1}
 \begin{tabular}{@{}lllll}
                 & \multicolumn{2}{c}{$U_a$ Ja}  & \multicolumn{2}{c}{$U_a$ Nein} \\
